--- a/src/resources/views/admin/nhap_kho/nhap_kho.ejs
+++ b/src/resources/views/admin/nhap_kho/nhap_kho.ejs
@@ -42,7 +42,7 @@
                                     <%= index + 1 %>
                                 </td>
                                 <td>
-                                    <%= phieunhapkho.nhan_vien_tao_id %>
+                                    <%= phieunhapkho.ten_nhan_vien_tao %>
                                 </td>
                                 <td>
                                     <%= phieunhapkho.tong_tien %>
