--- a/src/resources/views/admin/product/mau_sac.ejs
+++ b/src/resources/views/admin/product/mau_sac.ejs
@@ -75,8 +75,7 @@
                                 </td>
                                 <td>
                                     <div class="d-flex ">
-                                        <a href="/admin/edit_nhanvien/<%= item.id %>"
-                                            class="btn btn-outline-success btn-sm mx-1"><i
+                                        <a href="" class="btn btn-outline-success btn-sm mx-1"><i
                                                 class="fa-solid fa-pen-to-square"></i></a>
                                         <a href="/admin/delete_mau_sac/<%= item.id %>"
                                             class="btn btn-outline-danger btn-sm mx-1"><i
