--- a/src/resources/views/user/home.ejs
+++ b/src/resources/views/user/home.ejs
@@ -1,19 +1,19 @@
 <%- include('headerUser.ejs') %>
     <div class="banner owl-carousel owl-theme" style="padding: 0px;">
 
-        <div class="slide" style="background-image: url('/img/bgr1.png') !important; height: 400px;">
+        <div class="slide" style="background-image: url('/img/slide2.png') !important; height: 400px;">
             <div class="slide-content">
                 <h4 class="text-start "> </h4>
                 <h4 class="text-start "> </h4>
             </div>
         </div>
-        <div class="slide" style="background-image: url('img/bgr1.png') !important;height: 400px;">
+        <div class="slide" style="background-image: url('img/slide1.png') !important;height: 400px;">
             <div class="slide-content">
                 <h4 class="text-start "> </h4>
                 <h4 class="text-start "> </h4>
             </div>
         </div>
-        <div class="slide" style="background-image: url('img/bgr1.png') !important;height: 400px;">
+        <div class="slide" style="background-image: url('img/slide3.png') !important;height: 400px;">
             <div class="slide-content">
                 <h4 class="text-start "> </h4>
                 <h4 class="text-start "> </h4>
@@ -118,14 +118,14 @@
         </div>
 
         <div class="hang_san_xuat text-center pt-3 ">
-            <h3 class="pb-5 title2"> Hãng máy tính hàng đầu</h3>
-            <a href="#" class="  "><img src="img/hp.png"></a>
-            <a href="#" class=" mx-2 "><img src="img/lenovo.png"></a>
-            <a href="#" class=" mx-2 "><img src="img/macbook.png"></a>
-            <a href="#" class=" mx-2 "><img src="img/mis.png"></a>
-            <a href="#" class=" mx-2 "><img src="img/dell.png"></a>
-            <a href="#" class=" mx-2 "><img src="img/asus.png"></a>
-            <a href="#" class=" mx-2 "><img src="img/acer.png"></a>
+            <h3 class="pb-4 title2"> Hãng máy tính hàng đầu</h3>
+            <a href="#" class="  "><img class="hangmaytinh" src="img/hp.png"></a>
+            <a href="#" class=" mx-2 "><img class="hangmaytinh" src="img/lenovo.png"></a>
+            <a href="#" class=" mx-2 "><img class="hangmaytinh" src="img/macbook.png"></a>
+            <a href="#" class=" mx-2 "><img class="hangmaytinh" src="img/mis.png"></a>
+            <a href="#" class=" mx-2 "><img class="hangmaytinh" src="img/dell.png"></a>
+            <a href="#" class=" mx-2 "><img class="hangmaytinh" src="img/asus.png"></a>
+            <a href="#" class=" mx-2 "><img class="hangmaytinh" src="img/acer.png"></a>
         </div>
 
         <div class="danh_sach_san_pham mt-5">
@@ -166,6 +166,7 @@
             </div>
 
             <div class="content mt-5">
+                <h4 class="font-weight">Có thể bạn quan tâm</h4>
                 <div class="content" id="content">
                     <!-- Hiển thị một đoạn văn bản -->
                     <p>Máy tính laptop là thiết bị công nghệ được rất nhiều người dùng yêu thích và chọn lựa nhờ vào
