--- a/src/resources/views/admin/aside.ejs
+++ b/src/resources/views/admin/aside.ejs
@@ -12,11 +12,13 @@
         <!-- Sidebar user (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="/admin/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
                 <a href="#" class="d-block">
-                    <%= user.ten_nhan_vien %>
+                    <p> <span class="font-weight">Xin chào:</span>
+                        <%= user.ten_nhan_vien %>
+                    </p>
+
                 </a>
             </div>
         </div>
