--- a/src/resources/views/admin/bao_hanh/bao_hanh.ejs
+++ b/src/resources/views/admin/bao_hanh/bao_hanh.ejs
@@ -83,13 +83,15 @@
                                     </div>
                                     <div class="col-md-4">
                                         <label for="validationCustom03" class="form-label">Trạng thái</label>
-                                        <select class="form-control" name="trang_thai" id="">
-                                            <option value="1"> Chờ xác nhận </option>
-                                            <option value="2"> Đã xác nhận </option>
-                                            <option value="3"> Đã bảo hành </option>
-                                            <option value="4"> Đã hoàn thành </option>
-                                            <option value="5"> Hủy </option>
-                                        </select>
+                                        <div class="select-wrapper">
+                                            <select class="form-control" name="trang_thai" id="">
+                                                <option value="1"> Chờ xác nhận </option>
+                                                <option value="2"> Đã xác nhận </option>
+                                                <option value="3"> Đã bảo hành </option>
+                                                <option value="4"> Đã hoàn thành </option>
+                                                <option value="5"> Hủy </option>
+                                            </select>
+                                        </div>
                                     </div>
                                     <div class="col-12">
                                         <button class="btn btn-primary" type="submit">Submit form</button>
