--- a/src/resources/views/admin/danhmuc/hangsanxuat.ejs
+++ b/src/resources/views/admin/danhmuc/hangsanxuat.ejs
@@ -76,8 +76,7 @@
                                 </td>
                                 <td>
                                     <div class="d-flex ">
-                                        <a href="/admin/edit_nhanvien/<%= hangsanxuat.id %>"
-                                            class="btn btn-outline-success btn-sm mx-1"><i
+                                        <a href="" class="btn btn-outline-success btn-sm mx-1"><i
                                                 class="fa-solid fa-pen-to-square"></i></a>
                                         <a href="/admin/delete_hangsanxuat/<%= hangsanxuat.id %>"
                                             class="btn btn-outline-danger btn-sm mx-1"><i
