--- a/src/resources/views/admin/danhmuc/nhacungcap.ejs
+++ b/src/resources/views/admin/danhmuc/nhacungcap.ejs
@@ -111,8 +111,7 @@
                                 </td>
                                 <td>
                                     <div class="d-flex ">
-                                        <a href="/admin/edit_nhanvien/<%= nhacungcap.id %>"
-                                            class="btn btn-outline-success btn-sm mx-1"><i
+                                        <a href="" class="btn btn-outline-success btn-sm mx-1"><i
                                                 class="fa-solid fa-pen-to-square"></i></a>
                                         <a href="/admin/delete_tinh/<%= nhacungcap.thanh_pho_id %>"
                                             class="btn btn-outline-danger btn-sm mx-1"><i
