--- a/src/resources/views/admin/nhan_vien/editNhanvien.ejs
+++ b/src/resources/views/admin/nhan_vien/editNhanvien.ejs
@@ -14,7 +14,8 @@
                                 Hãy nhập Họ và Tên
                             </div>
                         </div>
-                        <textarea name="content" id="editor1"><%- data.content %></textarea>
+                        <!-- <textarea name="content" id="editor1"><%- data.content %></textarea> -->
+
                         <div class="col-md-4">
                             <label for="validationCustom02" class="form-label">Email</label>
                             <input type="email" name="email" class="form-control" id="validationCustom02"
