--- a/src/resources/views/admin/nhan_vien/nhanVien.ejs
+++ b/src/resources/views/admin/nhan_vien/nhanVien.ejs
@@ -4,10 +4,18 @@
         <div class="content-wrapper">
             <div class="row">
                 <div class="col-md-6">
-                    <button type="button" class="btn btn-outline-primary mt-2 mx-2" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop">
-                        Thêm nhân viên
-                    </button>
+                    <% if(user && user.ten_nhan_vien==='Admin' ) { %>
+                        <button type="button" class="btn btn-outline-primary mt-2 mx-2" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop">
+                            Thêm nhân viên
+                        </button>
+                        <% } else { %>
+                            <button type="button" class="btn btn-outline-primary mt-2 mx-2" data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop" disabled>
+                                Thêm nhân viên
+                            </button>
+                            <% } %>
+
                 </div>
                 <div class="col-md-6 mt-2 ">
                     <form action="/admin/search_nhanvien" id="combined-form" method="get" class="sidebar-form_1 mx-2">
@@ -39,7 +47,7 @@
                                             Hãy nhập Họ và Tên
                                         </div>
                                     </div>
-                                    <textarea name="content" id="editor1"></textarea>
+                                    <!-- <textarea name="content" id="editor1"></textarea> -->
 
                                     <div class="col-md-6">
                                         <label for="validationCustom02" class="form-label">Email</label>
@@ -137,19 +145,30 @@
                                     <%= nhanvien.dia_chi %>
                                 </td>
                                 <td>
-                                    <%= nhanvien.mat_khau %>
+                                    <% if(user && user.ten_nhan_vien==='Admin' ) { %>
+                                        <%= nhanvien.mat_khau %>
+                                            <% } else { %>
+                                                *******
+                                                <% } %>
                                 </td>
                                 <td>
                                     <%- nhanvien.content %>
                                 </td>
                                 <td>
                                     <div class="d-flex ">
-                                        <a href="/admin/edit_nhanvien/<%= nhanvien.id %>"
-                                            class="btn btn-outline-success btn-sm mx-1"><i
-                                                class="fa-solid fa-pen-to-square"></i></a>
-                                        <a href="/admin/delete_nhanvien/<%= nhanvien.id %>"
-                                            class="btn btn-outline-danger btn-sm mx-1"><i
-                                                class="fa-solid fa-trash"></i></a>
+                                        <% if(user && user.ten_nhan_vien==='Admin' ) { %>
+                                            <a href="/admin/edit_nhanvien/<%= nhanvien.id %>"
+                                                class="btn btn-outline-success btn-sm mx-1"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                            <a href="/admin/delete_nhanvien/<%= nhanvien.id %>"
+                                                class="btn btn-outline-danger btn-sm mx-1"><i
+                                                    class="fa-solid fa-trash"></i></a>
+                                            <% } else { %>
+                                                <button class="btn btn-outline-success btn-sm mx-1" disabled><i
+                                                        class="fa-solid fa-pen-to-square"></i></button>
+                                                <button class="btn btn-outline-danger btn-sm mx-1" disabled><i
+                                                        class="fa-solid fa-trash"></i></button>
+                                                <% } %>
                                     </div>
                                 </td>
                             </tr>
