--- a/src/resources/views/user/footerUser.ejs
+++ b/src/resources/views/user/footerUser.ejs
@@ -23,12 +23,12 @@
                             <a href="#">SDT: 0986516455</a>
                         </li>
                         <li class="menu-item menu-item-type-post_type menu-item-object-product">
-                            <a href="#">Địa chỉ: Ngõ 762, Bạch Đằng, Hà Nội</a>
+                            <a href="#">Địa chỉ: NGUYÊN KHÊ - ĐÔNG ANH - HÀ NỘI</a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="footer-content-column">
+            <div class="footer-content-column" style="text-align: center;">
                 <div class="footer-menu">
                     <h2 class="footer-menu-name"> Company</h2>
                     <ul id="menu-company" class="footer-menu-list">
@@ -58,29 +58,13 @@
             </div>
             <div class="footer-content-column">
                 <div class="footer-menu">
-                    <h2 class="footer-menu-name"> Quick Links</h2>
-                    <ul id="menu-quick-links" class="footer-menu-list">
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom">
-                            <a target="_blank" rel="noopener noreferrer" href="#">Support Center</a>
-                        </li>
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom">
-                            <a target="_blank" rel="noopener noreferrer" href="#">Service Status</a>
-                        </li>
-                        <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                            <a href="#">Security</a>
-                        </li>
-                        <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                            <a href="#">Blog</a>
-                        </li>
-                        <li class="menu-item menu-item-type-post_type_archive menu-item-object-customer">
-                            <a href="#">Customers</a>
-                        </li>
-                        <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                            <a href="#">Reviews</a>
-                        </li>
-                    </ul>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.3716837578654!2d105.81989956159522!3d21.177388880428243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313501994feda86b%3A0xbf7ba24842016479!2zU8ahbiBEdSwgTmd1ecOqbiBLaMOqLCDEkMO0bmcgQW5oLCBIw6AgTuG7mWksIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1713451021978!5m2!1svi!2s"
+                        width="341" height="215" style="border-radius: 10px;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
+
             <div class="footer-social-links"> <svg class="footer-social-amoeba-svg" xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 236 54">
                     <path class="footer-social-amoeba-path"
@@ -123,10 +107,6 @@
         </div>
         <div class="footer-copyright">
             <div class="footer-copyright-wrapper">
-                <p class="footer-copyright-text">
-                    <a class="footer-copyright-link" href="#" target="_self"> ©2020. | Designed By: Pooja Nahelia. | All
-                        rights reserved. </a>
-                </p>
             </div>
         </div>
     </footer>
