--- a/src/resources/views/admin/aside.ejs
+++ b/src/resources/views/admin/aside.ejs
@@ -159,7 +159,7 @@
                     </a>
                 </li>
                 <li class="nav-item has-treeview">
-                    <a href="#" class="nav-link">
+                    <a href="/admin/baocao" class="nav-link">
                         <i class="nav-icon fas fa-table mx-1"></i>
                         <p>
                             Báo cáo
