--- a/src/resources/views/admin/bao_hanh/bao_hanh.ejs
+++ b/src/resources/views/admin/bao_hanh/bao_hanh.ejs
@@ -106,11 +106,10 @@
                     </div>
                 </div>
             </div>
-            <table style="margin-top: 50px;"
-                class="table table-PW table-striped table-hover table-borderless align-middle">
+            <table style="margin-top: 50px;" class="table table-PW table-hover table-borderless align-middle">
                 <thead class="table-light">
                     <caption>Danh sach đơn bảo hành </caption>
-                    <tr>
+                    <tr style="background-color: #e9e9e9;">
                         <th>STT</th>
                         <th>Tên sản phẩm</th>
                         <th>Loại bảo trì</th>
