--- a/src/resources/views/admin/nhan_vien/nhanVien.ejs
+++ b/src/resources/views/admin/nhan_vien/nhanVien.ejs
@@ -110,11 +110,10 @@
                     </div>
                 </div>
             </div>
-            <table style="margin-top: 50px;"
-                class="table table-PW table-striped table-hover table-borderless align-middle">
+            <table style="margin-top: 50px;" class="table table-PW table-hover table-borderless align-middle">
                 <thead class="table-light">
                     <caption>Danh sách nhân viên</caption>
-                    <tr>
+                    <tr style="background-color: #e9e9e9;">
                         <th>STT</th>
                         <th>Tên nhân viên</th>
                         <th>Email</th>
