--- a/src/resources/views/admin/nhap_kho/nhap_kho.ejs
+++ b/src/resources/views/admin/nhap_kho/nhap_kho.ejs
@@ -20,11 +20,10 @@
                     </form>
                 </div>
             </div>
-            <table style="margin-top: 50px;"
-                class="table table-PW table-striped table-hover table-borderless align-middle">
+            <table style="margin-top: 50px;" class="table table-PW table-hover table-borderless align-middle">
                 <thead class="table-light">
                     <caption>Danh sách phiếu nhập kho</caption>
-                    <tr>
+                    <tr style="background-color: #e9e9e9;">
                         <th>STT</th>
                         <th>Tên nhân viên tạo</th>
                         <th>Tổng tiền</th>
