--- a/src/resources/views/admin/product/product.ejs
+++ b/src/resources/views/admin/product/product.ejs
@@ -151,11 +151,10 @@
                     </div>
                 </div>
             </div>
-            <table style="margin-top: 50px;"
-                class="table table-PW table-striped table-hover table-borderless align-middle">
+            <table style="margin-top: 50px;" class="table table-PW table-hover table-borderless align-middle">
                 <thead class="table-light">
                     <caption>Danh sach sản phẩm </caption>
-                    <tr>
+                    <tr style="background-color: #e9e9e9;">
                         <th>STT</th>
                         <th class="text-center"> Ảnh </th>
                         <th>Tên sản phẩm</th>
