--- a/src/resources/views/admin/product/product_all.ejs
+++ b/src/resources/views/admin/product/product_all.ejs
@@ -102,7 +102,6 @@
                                     <div class="col-md-6">
                                         <label for="validationCustom03" class="form-label">Màu sắc </label>
                                         <div class="select-wrapper">
-
                                             <select class="form-control" name="mau_sac_id" id="">
                                                 <option></option>
                                                 <% if (mau_sac && mau_sac.length> 0) { %>
@@ -169,11 +168,10 @@
                     </div>
                 </div>
             </div>
-            <table style="margin-top: 50px;"
-                class="table table-PW table-striped table-hover table-borderless align-middle">
+            <table style="margin-top: 50px;" class="table table-PW table-hover table-borderless align-middle">
                 <thead class="table-light">
                     <caption>Danh sach sản phẩm </caption>
-                    <tr>
+                    <tr style="background-color: #e9e9e9;">
                         <th>STT</th>
                         <th class="text-center">Hình ảnh</th>
                         <th>Tên sản phẩm</th>
